# NyxWatch

./: .gitignore  README.md
NyxWatch-server/: CMakeLists.txt  audiostream.cpp  audiostream.h  camerastream.cpp  camerastream.h  main.cpp  networkserver.cpp  networkserver.h
NyxWatch_client/: CMakeLists.txt  Main.qml  clientstream.cpp  clientstream.h  main.cpp
